mule-user-guide/v/3.5/imap-connector.adoc
= IMAP Connector

The IMAP Connector, which is configurable only as an inbound endpoint (i.e., message source) with a one-way exchange pattern, implements a transport channel that enables your Mule application to retrieve email from an IMAP email server.

IMAP is similar to POP3, except IMAP support both online and offline modes. For instance, IMAP users can leave email messages on the IMAP server until they explicitly delete them. Like POP3, IMAP cannot send email; for that, you must implement an SMTP outbound endpoint.

For a secure transport channel (either TLS or SSL), you can specify the IMAPS protocol.

== Configuration

IMAP endpoint configuration consists of two stages:

. Place you IMAP endpoint at the head of the sequence of building blocks that make up your Mule flow. Since it must serve as the message source for your flow, it cannot occupy any other positions. (You can also use *Composite Source* scope to wrap the IMAP endpoint along with the POP3 endpoint so that your flow can receive email through multiple transport channels).

. Configure the IMAP endpoint by providing values for fields on the various tabs on the properties editor, which you open by double-clicking the IMAP endpoint icon the Message Flow canvas.

== General Tab

image:/docs/download/attachments/122750882/Studio-imap-gen.png?version=1&modificationDate=1421450125195[image]

[width="100%",cols=",",options="header"]
|===
|Property |Description
|*Display Name* |Defaults to the generic endpoint name. Change the display name, which must be alpha-numberic, to reflect that endpoint's specific role in the flow, i.e.,`Incoming Email`.
|*Host* |Enter the Fully Qualified Domain Name (FQDN) or IP address of the IMAP server from which email will be retrieved. Defaults to `localhost`.
|*Port* |The port number that connects to the IMAP server. The default is *143* for IMAP, *993* for IMAPS.
|*User* |The username for authentication on the IMAP server.
|*Password* |The password for authentication on the IMAP server.
|*Connector Configuration* |Use the dropdown list to select a previously created connector configuration for this endpoint. If you have not created a connector configuration for this type of endpoint, you can do so from this window by clicking *Add*. Click *Edit* to modify a previously created global element.
|===

== Advanced Tab

image:/docs/download/attachments/122750882/studio-imap-adv.png?version=1&modificationDate=1421450124822[image]

[width="100%",cols=",",options="header"]
|===
|Property |Description
|*Address* |Specify the URL of the IMAP server from which email is to be retrieved.
|*Resource Timeout* |Specify how long (in ms) the endpoint must wait for a response from the IMAP server. The default is *10000* ms.
|*Encoding* |Choose from a drop-down list the character set used for message data (i.e. UTF-8).
|*Disable Transport Transformer* |Check this box if you do _not_ want to use the endpoint's default response transport.
|*MIME Type* |Select from the dropdown list one the formats this endpoint supports.
|*Connector Endpoint |Use the drop-down list to select a previously configured global endpoint template, if any exist. If you have not created a global element for this type of endpoint, you do so by clicking *Add* and completing the fields on the pane that appears. Click *Edit* to modify a previously created global element.
|*Enable default events tracking* |Enable default [business event] tracking for this endpoint.
|===

== Transformer Tab

image:/docs/download/attachments/122750882/Studio-imap-trans.png?version=1&modificationDate=1421450124451[image]

[width="100%",cols=",",options="header"]
|===
|Field |Description
|*Request Transformer References* |Enter a list of synchronous transformers that will be applied to the request before it is sent to the transport.
|*Response Transformer References* |Enter a list of synchronous transformers that wil be applied to the response before it is returned from the transport.
|===

== Security Tab

image:/docs/download/attachments/122750882/studio-imap-sec.png?version=1&modificationDate=1421450124060[image]

|===
|Property |Description
|IMAPS |Check this box to enable IMAPS. Messages will be sent over a secure socket layer. Messages will be sent over a secure socket layer. By default, IMAPS is turned *off*.
|===

== Reference

See the [IMAP Transport Reference] for details on setting the properties for an IMAP endpoint using an XML editor.
