mule-user-guide/v/3.7/imap-connector.adoc
= IMAP Connector
:keywords: anypoint studio, esb, connectors, imap, email

The IMAP Connector, which is configurable only as an inbound endpoint (also known as a message source) with a one-way exchange pattern, implements a transport channel that enables your Mule application to retrieve email from an IMAP email server.

IMAP is similar to POP3, except IMAP supports both online and offline modes. For instance, IMAP users can leave email messages on the IMAP server until they explicitly delete them. Like POP3, IMAP cannot send email; for that, you must implement an SMTP outbound endpoint.

For a secure transport channel (either TLS or SSL), you can specify the IMAPS protocol.

== Installation

You can install a connector in Anypoint Studio using the instructions in http://www.mulesoft.org/documentation/display/current/Anypoint+Exchange#AnypointExchange-InstallingaConnectorfromAnypointExchange[Installing a Connector from Anypoint Exchange].

== Configuration

IMAP endpoint configuration consists of two stages:

. Place your IMAP endpoint at the head of the sequence of building blocks that make up your Mule flow. Since it must serve as the message source for your flow, it cannot occupy any other position. (You can also use the *Composite Source* scope to wrap the IMAP endpoint along with the POP3 endpoint so that your flow can receive email through multiple transport channels).
. Configure the IMAP endpoint by providing values for the fields on the various tabs on the properties editor, which you open by double-clicking the IMAP endpoint icon on the Message Flow canvas.

=== General Tab

image:Studio-imap-gen.png[Studio-imap-gen]

[width="100%",cols="50%,50%",options="header"]
|===
|Property |Description
|*Display Name* |Defaults to the generic endpoint name. Change the display name, which must be alpha-numeric, to reflect the endpoint's specific role in the flow, such as `Incoming Email`
|*Host* |Enter the Fully Qualified Domain Name (FQDN) or IP address of the IMAP server from which email is retrieved. Defaults to *localhost*.
|*Port* |The port number that connects to the IMAP server. The default is *143* for IMAP, *993* for IMAPS.
|*User* |The username for authentication on the IMAP server.
|*Password* |The password for authentication on the IMAP server.
|*Connector Configuration* |Use the dropdown list to select a previously created connector configuration for this endpoint. If you have not created a connector configuration for this type of endpoint, you can do so from this window by clicking *Add* . Click *Edit* to modify a previously created global element.
|*Properties* |Enter a key, value, and value reference for the IMAP server.
|===

=== Advanced Tab

image:studio-imap-adv.png[studio-imap-adv]

[width="100%",cols="50%,50%",options="header"]
|===
|Property |Description
|*Address* |Specify the URL of the IMAP server from which email is to be retrieved.
|*Response Timeout* |Specify how long (in milliseconds) the endpoint must wait for a response from the IMAP server. The default is *10000* ms.
|*Encoding* |Choose from a drop-down list the character set used for message data. (Such as, UTF-8.)
|*Disable Transport Transformer* |Check this box if you do *_not_* want to use the endpoint’s default response transport.
|*MIME Type* |Select from the dropdown list one of the formats this endpoint supports.
|*Connector Endpoint* |Use the drop-down list to select a previously configured global endpoint template, if any exist. If you have not created a global element for this type of endpoint, you do so by clicking *Add* and completing the fields on the pane that appears. Click *Edit* to modify a previously created global element.
|*Enable default events tracking* |Enable default  link:/documentation/display/current/Business+Events[business event]  tracking for this endpoint.
|===

=== Transformers Tab

image:Studio-imap-trans.png[Studio-imap-trans]

[width="100%",cols="50%,50%",options="header"]
|===
|Field |Description
|*Request Transformer References* |Enter a list of synchronous transformers to apply to the request before it is sent to the transport.
|*Response Transformer References* |Enter a list of synchronous transformersto apply to the response before it is returned from the transport.
|===

=== Security Tab

image:studio-imap-sec.png[studio-imap-sec]

[width="100%",cols="50%,50%",options="header"]
|===========
|Property |Description
|*IMAPS* |Check this box to enable IMAPS. Messages are sent over a secure socket layer. Messages are sent over a secure socket layer. By default, IMAPS is turned *off*.
|===========

== See Also

See the link:/documentation/display/current/IMAP+Transport+Reference[IMAP Transport Reference] for details on setting the properties for an IMAP endpoint using an XML editor.
